# channel_weaver

./: .copilot-instructions.md  .gitignore  PYTHON_314_MODERNIZATION_PLAN.md  README.md  RESTRUCTURING_PLAN.md  channel_weaver.yaml  debug_click.py  debug_sections.py  evaluation.md  m32_processor.py  prd.md  pyproject.toml  pytest.ini  remediation_plan.md  test_click_analysis.py
.github/: copilot-instructions.md
.github/prompts/: architecture-review.prompt.md  refine-story.prompt.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE_REMEDIATION.md  Click Feature PRD.md  SECTION_SPLITTING_FIX_PLAN.md  TESTING_PLAN.md  YAML_CONFIG_PLAN.md  click_feature_implementation_plan.md  prd.md
src/: __init__.py  constants.py  converters.py  exceptions.py  m32_processor.py  main.py  models.py  protocols.py  types.py  validators.py
src/audio/: __init__.py  discovery.py  extractor.py  info.py  validation.py
src/audio/click/: __init__.py  analyzer.py  enums.py  models.py  protocols.py  section_processor.py
src/audio/ffmpeg/: __init__.py  commands.py  executor.py
src/cli/: __init__.py  app.py  commands.py  utils.py
src/config/: __init__.py  default_source.py  defaults.py  enums.py  generator.py  loader.py  models.py  protocols.py  resolver.py  types.py  validators.py  yaml_source.py
src/exceptions/: __init__.py  audio.py  base.py  click.py  config.py
src/output/: __init__.py  console.py  metadata.py  naming.py  protocols.py  section_handler.py  session_json.py
src/processing/: __init__.py  builder.py  mono.py  section_splitter.py  stereo.py
src/processing/converters/: __init__.py  factory.py  float32.py  int16.py  int24.py  protocols.py  source.py
tests/: conftest.py  test_basic_infrastructure.py
tests/integration/: conftest.py  test_basic_pipeline.py  test_cli_option_precedence.py  test_cli_validation.py  test_option_precedence_e2e.py  test_yaml_config_integration.py
tests/unit/: conftest.py
tests/unit/audio/: test_discovery.py  test_info.py  test_validation.py
tests/unit/audio/click/: __init__.py  test_analyzer.py  test_models.py  test_section_processor.py
tests/unit/audio/ffmpeg/: test_commands.py
tests/unit/cli/: test_app.py  test_commands.py  test_processing_options.py  test_utils.py
tests/unit/config/: conftest.py  test_enums.py  test_generator.py  test_models.py  test_protocols.py  test_resolver.py  test_section_splitting.py  test_validators.py  test_yaml_source.py
tests/unit/output/: test_console.py  test_session_json.py
tests/unit/processing/: test_builder.py  test_converters.py  test_writers.py
